Details View created

--- a/NIBM-CAFE/Base.lproj/Main.storyboard
+++ b/NIBM-CAFE/Base.lproj/Main.storyboard
@@ -320,6 +320,80 @@
             </objects>
             <point key="canvasLocation" x="2211.594202898551" y="1941.9642857142856"/>
         </scene>
+        <!--Food Inside View Controller-->
+        <scene sceneID="5Kx-LE-08J">
+            <objects>
+                <viewController storyboardIdentifier="FoodInsideViewController" id="IKK-CX-xPA" customClass="FoodInsideViewController" customModule="NIBM_CAFE" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pXY-DY-0gI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DY4-a8-ogn">
+                                <rect key="frame" x="0.0" y="44" width="414" height="220"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="220" id="LFo-Rx-I9Q"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EKV-X0-tqS">
+                                <rect key="frame" x="25" y="279" width="108" height="26"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KF4-7d-su4">
+                                <rect key="frame" x="25" y="320" width="142" height="34"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nym-Cg-NQ5">
+                                <rect key="frame" x="25" y="369" width="364" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8dM-W5-zLB" customClass="roundButton" customModule="NIBM_CAFE" customModuleProvider="target">
+                                <rect key="frame" x="40" y="772" width="334" height="50"/>
+                                <color key="backgroundColor" name="AccentColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="8w5-JK-EwT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="Add To Cart">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="vNo-wx-S6Z"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vNo-wx-S6Z" firstAttribute="bottom" secondItem="8dM-W5-zLB" secondAttribute="bottom" constant="40" id="Bmj-Xd-3BO"/>
+                            <constraint firstItem="8dM-W5-zLB" firstAttribute="centerX" secondItem="pXY-DY-0gI" secondAttribute="centerX" id="Lkq-dv-Mkq"/>
+                            <constraint firstItem="Nym-Cg-NQ5" firstAttribute="leading" secondItem="vNo-wx-S6Z" secondAttribute="leading" constant="25" id="N9j-Gg-zCX"/>
+                            <constraint firstItem="KF4-7d-su4" firstAttribute="top" secondItem="EKV-X0-tqS" secondAttribute="bottom" constant="15" id="PCT-vy-oeF"/>
+                            <constraint firstItem="DY4-a8-ogn" firstAttribute="leading" secondItem="vNo-wx-S6Z" secondAttribute="leading" id="VVY-mx-R6t"/>
+                            <constraint firstItem="vNo-wx-S6Z" firstAttribute="trailing" secondItem="8dM-W5-zLB" secondAttribute="trailing" constant="40" id="aHF-eC-RSj"/>
+                            <constraint firstItem="KF4-7d-su4" firstAttribute="leading" secondItem="vNo-wx-S6Z" secondAttribute="leading" constant="25" id="adH-oQ-i6u"/>
+                            <constraint firstItem="EKV-X0-tqS" firstAttribute="leading" secondItem="vNo-wx-S6Z" secondAttribute="leading" constant="25" id="eaI-Gd-8vU"/>
+                            <constraint firstItem="EKV-X0-tqS" firstAttribute="top" secondItem="DY4-a8-ogn" secondAttribute="bottom" constant="15" id="hO4-GL-5iL"/>
+                            <constraint firstItem="vNo-wx-S6Z" firstAttribute="trailing" secondItem="Nym-Cg-NQ5" secondAttribute="trailing" constant="25" id="iVI-pf-1Si"/>
+                            <constraint firstItem="vNo-wx-S6Z" firstAttribute="trailing" secondItem="DY4-a8-ogn" secondAttribute="trailing" id="kc0-8i-FIc"/>
+                            <constraint firstItem="Nym-Cg-NQ5" firstAttribute="top" secondItem="KF4-7d-su4" secondAttribute="bottom" constant="15" id="oU5-eL-q2d"/>
+                            <constraint firstItem="DY4-a8-ogn" firstAttribute="top" secondItem="vNo-wx-S6Z" secondAttribute="top" id="roJ-Vn-YLT"/>
+                            <constraint firstItem="8dM-W5-zLB" firstAttribute="leading" secondItem="vNo-wx-S6Z" secondAttribute="leading" constant="40" id="z5f-0u-dNS"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="Nym-Cg-NQ5" id="VHA-ju-xAq"/>
+                        <outlet property="foodnameLabel" destination="EKV-X0-tqS" id="rXc-C7-nkK"/>
+                        <outlet property="imageView" destination="DY4-a8-ogn" id="udR-N5-EL9"/>
+                        <outlet property="priceLabel" destination="KF4-7d-su4" id="QQe-Jx-3fh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7x5-1t-6wZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2211.594202898551" y="2616.9642857142858"/>
+        </scene>
         <!--Orders Table View Controller-->
         <scene sceneID="VTz-Pt-lzX">
             <objects>
